add  mapping for users

--- a/src/main/resources/static/css/icomoon.css
+++ b/src/main/resources/static/css/icomoon.css
@@ -1381,7 +1381,7 @@
   content: "\e90d";
 }
 .icon-bulb:before {
-  content: "\e90e";
+  content: "\e910";
 }
 .icon-pen2:before {
   content: "\e90f";
