--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -661,7 +661,7 @@ body.offcanvas {
     top: -20px;
     left: 0;
     right: 0;
-    width: 100px;
+    width: 98px;
     height: 50px;
     display: table;
     margin: 0 auto;
@@ -1427,3 +1427,7 @@ body.offcanvas {
 
 .js .animate-box {
   opacity: 0; }
+
+.rounded-circle {
+  border-radius: 50%;
+}
