--- a/src/main/resources/templates/user_page.html
+++ b/src/main/resources/templates/user_page.html
@@ -24,26 +24,13 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="/css/animate.css">
-    <!-- Icomoon Icon Fonts-->
-    <link rel="stylesheet" href="/css/icomoon.css">
+
     <!-- Bootstrap  -->
     <link rel="stylesheet" href="/css/bootstrap.css">
-    <!-- Flexslider  -->
-    <link rel="stylesheet" href="/css/flexslider.css">
-    <!-- Owl Carousel -->
-    <link rel="stylesheet" href="/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="/css/owl.theme.default.min.css">
     <!-- Theme style  -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <!-- Modernizr JS -->
-    <script src="/js/modernizr-2.6.2.min.js"></script>
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-    <script src="/js/respond.min.js"></script>
-    <![endif]-->
+
 
 </head>
 <body>
@@ -67,28 +54,6 @@
                   enctype="multipart/form-data">
                 <input id="fileInput" type="file" name="file" accept="image/*" required>
             </form>
-
-            <div class="colorlib-footer">
-                <p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright
-                    <script>document.write(new Date().getFullYear());</script>
-                    All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a
-                            href="https://colorlib.com" target="_blank">Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span>
-                    <span>Distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a></span> <span>Demo Images: <a
-                            href="https://unsplash.com/" target="_blank">Unsplash.com</a></span></small></p>
-            </div>
-
-
-            <script>
-                document.getElementById("imageUpload").onclick = function () {
-                    document.getElementById("fileInput").click();
-                };
-
-                document.getElementById("fileInput").onchange = function (event) {
-                    document.getElementById("imageUploadForm").submit();
-                };
-            </script>
         </aside>
 
         <div id="colorlib-main">
@@ -126,18 +91,13 @@
                         <th:block th:each="i : ${#numbers.sequence(0, inventory.size() - 1, 3)}">
                             <div class="row">
                                 <!-- Ітерувати через кожну групу -->
-                                <th:block
-                                        th:each="j : ${#numbers.sequence(i, ((i + 2) &lt; inventory.size() ? (i + 2) : inventory.size() - 1))}">
-                                    <div class="col-md-4 text-center animate-box">
-                                        <div class="services color-1">
-                                <span class="icon">
-                                    <i class="icon-bulb"></i>
-                                </span>
-                                            <div class="desc">
-                                                <h3 style="word-wrap: break-word;" th:text="${inventory[j].getName()}">
-                                                    Name</h3>
-                                                <h4 style="word-wrap: break-word;"
-                                                    th:text="${inventory[j].getDescription()}">Description</h4>
+                                <th:block th:each="j : ${#numbers.sequence(i, ((i + 2) &lt; inventory.size() ? (i + 2) : inventory.size() - 1))}">
+                                    <div class="col-md-3" style="margin: 5px; height: 5%;">
+                                        <div style="border: 1px solid #ccc; padding: 10px; ">
+
+                                            <div>
+                                                <h3 style="word-wrap: break-word;" th:text="${inventory[j].getName()}">Name</h3>
+                                                <h4 style="word-wrap: break-word;" th:text="${inventory[j].getDescription()}">Description</h4>
                                                 <h4 th:text="${inventory[j].getQuality()}">Quality</h4>
                                                 <h4 th:text="${inventory[j].getPrice()}">Price</h4>
                                             </div>
@@ -163,7 +123,8 @@
                             <span class="colorlib-counter-label">Items in the inventory</span>
                         </div>
                         <div class="col-md-3 text-center animate-box">
-                            <span class="colorlib-counter js-counter" data-from="0" th:data-to="${user.getTradeCount()}" data-speed="3000"
+                            <span class="colorlib-counter js-counter" data-from="0" th:data-to="${user.getTradeCount()}"
+                                  data-speed="3000"
                                   data-refresh-interval="50"></span>
                             <span class="colorlib-counter-label">Trades</span>
                         </div>
@@ -183,15 +144,7 @@
 <!-- jQuery -->
 <script src="/js/jquery.min.js"></script>
 <!-- jQuery Easing -->
-<script src="/js/jquery.easing.1.3.js"></script>
-<!-- Bootstrap -->
-<script src="/js/bootstrap.min.js"></script>
-<!-- Waypoints -->
-<script src="/js/jquery.waypoints.min.js"></script>
-<!-- Flexslider -->
-<script src="/js/jquery.flexslider-min.js"></script>
-<!-- Owl carousel -->
-<script src="/js/owl.carousel.min.js"></script>
+
 <!-- Counters -->
 <script src="/js/jquery.countTo.js"></script>
 
